# CPP-Project

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp
resources/: default.frag  default.vert
resources/Assets/: Tiago27937RIG.mtl  table.mtl  table2.mtl
src/: Camera.cpp  Minimap.cpp  Minimap.h  headers.h  main.cpp  stb_image.h
src/Camera/: Camera.cpp  Camera.h
src/Inputs/: InputController.cpp  InputController.h
src/Lights/: Lights.cpp  Lights.h
src/Minimap/: Minimap.cpp  Minimap.h
src/Renderer/: Balls.cpp  Balls.h  EBO.cpp  EBO.h  Renderer.cpp  Renderer.h  Sphere.cpp  Sphere.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/Renderer/Balls/: Balls.cpp  Balls.h
src/Renderer/Mesh/: Mesh.cpp  Mesh.h
src/Renderer/Shader/: shaderClass.cpp  shaderClass.h
src/Texture/: Texture.cpp  Texture.h  stb_image_impl.cpp
src/header/: Camera.h
